--- a/package.json
+++ b/package.json
@@ -8,22 +8,31 @@
 		"start": "next start",
 		"typecheck": "ts --noEmit",
 		"format": "biome format --write",
-		"format:check": "biome format --check"
+		"format:check": "biome format --check",
+		"db:generate": "prisma generate",
+		"db:push": "prisma db push",
+		"db:studio": "prisma studio"
 	},
 	"dependencies": {
+		"@prisma/adapter-pg": "^7.0.0",
+		"@prisma/client": "^7.0.0",
+		"@t3-oss/env-nextjs": "^0.13.8",
 		"next": "16.0.3",
 		"react": "19.2.0",
-		"react-dom": "19.2.0"
+		"react-dom": "19.2.0",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.2.0",
+		"@biomejs/biome": "2.3.7",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"babel-plugin-react-compiler": "1.0.0",
+		"dotenv": "^17.2.3",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
+		"prisma": "^7.0.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	},
