--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
 		"db:studio": "prisma studio"
 	},
 	"dependencies": {
+		"@orpc/client": "^1.11.3",
+		"@orpc/openapi": "^1.11.3",
+		"@orpc/server": "^1.11.3",
+		"@orpc/zod": "^1.11.3",
 		"@prisma/adapter-pg": "^7.0.0",
 		"@prisma/client": "^7.0.0",
 		"@t3-oss/env-nextjs": "^0.13.8",
 		"next": "16.0.3",
+		"nodemailer": "^7.0.10",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"zod": "^4.1.12"
@@ -26,12 +31,14 @@
 		"@biomejs/biome": "2.3.7",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
+		"@types/nodemailer": "^7.0.4",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"babel-plugin-react-compiler": "1.0.0",
 		"dotenv": "^17.2.3",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
+		"pg": "^8.16.3",
 		"prisma": "^7.0.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
