--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"typecheck": "ts --noEmit",
+		"typecheck": "tsc --noEmit",
 		"format": "biome format --write",
 		"format:check": "biome format --check",
 		"db:generate": "prisma generate",
@@ -41,7 +41,7 @@
 		"pg": "^8.16.3",
 		"prisma": "^7.0.0",
 		"tailwindcss": "^4",
-		"typescript": "^5"
+		"typescript": "^5.9.3"
 	},
 	"lint-staged": {
 		"*.*": "biome format --write"
