--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "template",
 	"private": true,
 	"scripts": {
-		"prepare": "husky && bun db:generate",
+		"prepare": "husky && bun db:generate && bun orpc:contract:generate",
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
@@ -12,7 +12,7 @@
 		"db:generate": "prisma generate",
 		"db:push": "prisma db push",
 		"db:studio": "prisma studio",
-		"contract:generate": "bun scripts/generate-contract.ts"
+		"orpc:contract:generate": "bun scripts/generate-contract.ts"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
